--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -14,20 +13,17 @@
       padding: 40px;
       margin: 0;
     }
-
     .alert-light {
       height: 6px;
       background: red;
       box-shadow: 0 0 20px red;
       animation: flash 1s infinite;
     }
-
     @keyframes flash {
-      0%   { opacity: 1; }
-      50%  { opacity: 0.2; }
+      0% { opacity: 1; }
+      50% { opacity: 0.2; }
       100% { opacity: 1; }
     }
-
     .card {
       background: #1a1d25;
       border-left: 6px solid #00ffff;
@@ -37,18 +33,15 @@
       max-width: 960px;
       margin: 40px auto;
     }
-
     h1 {
       color: #00ffff;
       font-size: 28px;
       margin-bottom: 10px;
     }
-
     h3 {
       color: #ff3c3c;
       margin-top: 30px;
     }
-
     .highlight {
       background-color: #2c313d;
       padding: 15px;
@@ -57,7 +50,6 @@
       margin-bottom: 25px;
       border-radius: 5px;
     }
-
     textarea {
       width: 100%;
       height: 150px;
@@ -70,7 +62,6 @@
       margin-bottom: 20px;
       resize: vertical;
     }
-
     button {
       background: #00bcd4;
       color: #000;
@@ -81,12 +72,10 @@
       cursor: pointer;
       transition: background 0.3s, box-shadow 0.3s;
     }
-
     button:hover {
       background: #26c6da;
       box-shadow: 0 0 15px #00ffff;
     }
-
     #finalMessage {
       display: none;
       margin-top: 30px;
@@ -124,14 +113,14 @@
   <button onclick="submitAndDownload()">✅ Antwort bestätigen & PDF speichern</button>
 
   <div id="finalMessage">
-    <strong>Auswertung:</strong><br>
-    Ihre Reaktion wurde dokumentiert. Die missachtete Trennung zwischen Labor- und Produktivsystemen ermöglichte den ALPHV-Angriff. Präventive Korrekturen in der Netzsegmentierung müssen umgehend eingeleitet werden.
+    <strong>✅ Containment abgeschlossen:</strong><br>
+    Die isolierte Analyse wurde erfolgreich gespeichert. Die Ursache lag in fehlender Segmentierung – eine technische Nachbesserung der SOP-Umsetzung ist dringend geboten.
   </div>
 </div>
 
 <script>
+  window.jsPDF = window.jspdf.jsPDF;
   function submitAndDownload() {
-    const { jsPDF } = window.jspdf;
     const text = document.getElementById("antwort").value;
 
     document.body.style.background = "#2c0000";
