--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <p>Es wurden sensible ZIP-Dateien extrahiert und zur IP <code>45.61.187.123</code> über HTTPS (34 GB) exfiltriert. Die Datei <code>NOTICE_FOR_PAYMENT.txt</code> wurde im Root-Verzeichnis abgelegt.</p>
 
   <h3>📝 Ihre Maßnahme:</h3>
-  <p>Welche Maßnahmen würden Sie als Incident-Response-Team auf Basis der Netzsegmentierungs-SOP einleiten?</p>
+  <p>Welche Maßnahmen würden einleiten?</p>
 
   <textarea id="antwort" placeholder="Begründung hier eintragen..."></textarea>
   <button onclick="submitAndDownload()">✅ Antwort bestätigen & PDF speichern</button>
